show static cover behind dynamic, fix icon

--- a/src/styles/bulma.scss
+++ b/src/styles/bulma.scss
@@ -26,21 +26,25 @@ $navbar-breakpoint: 0;
   @extend .is-shadowless;
 }
 
-.is-hidden-on-hover {
+.is-absolute {
   position: absolute;
-  background-color: $background;
+}
+
+.is-hidden-on-hover {
+  // position: absolute;
+  // background-color: $background;
   // ensure that we hide the other image
-  border: 1px $background solid;
+  // border: 1px $background solid;
   
-  &:hover {
-    opacity: 0;
-  }
+  // &:hover {
+  //   opacity: 0;
+  // }
 
   // always show on two columns
   // @media (max-width: $widescreen) {
   //   opacity: 0;
   // }
-  opacity: 0;
+  // opacity: 0;
 
   // always show on touch devices
   // @media (pointer: coarse) and (any-pointer: coarse) {
